--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav-links">
             <li class="link"><a href="#">Home</a></li>
             <li id="link1" class="link"><a href="#">Features</a></li>
-            <li id="link2" class="link"><a href="#">Pricing</a></li>
+            <li id="link2" class="link"><a href="#">Project</a></li>
             <li id="link3" class="link"><a href="#">About</a></li>
         </ul>
         <button class="btn">Hire me</button>
@@ -32,14 +32,13 @@
             <h4>CREATE YOUR SITE LIKE A PRO</h4>
             <h1>Hi, I'm <span>Ilham</span>, Web Developer</h1>
             <P>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Quasi illo inventore excepturi velit odit repellat temporibus iste expedita delectus quibusdam.
-                Dolor, amet repudiandae illo aut voluptatibus neque id quos magni.
+                I craft modern and functional websites to help businesses and individuals establish a strong online presence.
+            My focus is on performance, responsive design, and delivering an optimal user experience.
             </P>
             <button class="btn">Get Started</button>
         </div>
         <div class="image">
-            <img src="image/header.png">
+            <img src="image/profile.png">
         </div>
     </header>
 
@@ -47,7 +46,7 @@
         <h2 class="header">ABOUT ME</h2>
         <div class="column">
             <div class="image">
-                <img src="image/header.png" alt="">
+                <img src="image/profile.png" alt="">
             </div>
             <div class="box">
                 <span class="blur"></span>
@@ -55,156 +54,155 @@
             <h2>Hi, IT'S ME</h2>
             <h4>Ilham, Web Developer</h4>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolores eaque dolorem sint libero cumque quos quia numquam vero, autem pariatur laboriosam nesciunt eum possimus, doloribus obcaecati! Voluptatibus, inventore corrupti.
+                I am a passionate web developer with a keen interest in
+creating dynamic and responsive web applications.
+My journey in web development began with a fascination
+for how websites work and the technologies behind them.
+
+I have experience in various web technologies including
+HTML, CSS, JavaScript, React, Laravel, Tailwind, Bootstrap. I enjoy learning
+new frameworks and libraries to enhance my skills
+and deliver better user experiences.
             </p>
             </div>
         </div>
 
-    </section>
-    <section class="container">
-        <h2 class="header">OUR FEATURES</h2>
-        <div class="features">
-            <div class="card">
-                <span><i class="ri-money-dollar-box-line"></i></span>
-                <h4>Free Tutorials</h4>
-                <p>
-                    My tutorials in my channel are free and don't need to pay anything.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-bug-line"></i></span>
-                <h4>Fix Your Bugs</h4>
-                <p>
-                    You have any problem in your codes? Tell me, i will help you fix it.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-history-line"></i></span>
-                <h4>On Time Videos</h4>
-                <p>
-                    We have video each 4 days, So check channel every 4 days to watch it!
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-shake-hands-line"></i></span>
-                <h4>Cooperation</h4>
-                <p>
-                    MYou want we work together? Write email to us, we will read it.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-        </div>
-    </section>
-    
-    <section class="container">
-        <h2 class="header">PROJECT PRICING PLANS</h2>
-        <p class="sub-header">
-            Our pricing plans come with various membership tiers, each tailored to different project and
-            class+ code types.
-        </p>
-        <div class="pricing">
-            <div class="card">
-                <div class="content">
-                    <h4>Basic Plan</h4>
-                    <h3>0$</h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Smart coding plan
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        At home workouts
-                    </p>
-                </div>
-                <button class="btn">Join Now</button>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>Gold Plan</h4>
-                    <h3>10$</h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Pro codes
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Smart coding plan
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        At home workouts
-                    </p>
-                </div>
-                <button class="btn">Join Now</button>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>Gold Plan</h4>
-                    <h3>100$</h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Elite Classes & Courses
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Pro codes
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Personal Coaching
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Smart coding plan
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        At home workouts
-                    </p>
-                </div>
-                <button class="btn">Join Now</button>
-            </div>
-        </div>
-    </section>
-
-    <footer class="container">
-        <span class="blur"></span>
-        <span class="blur"></span>
-        <div class="column">
-            <div class="logo">
-                <img src="image/logo.png">
-            </div>
+<section class="container">
+    <h2 class="header">OUR FEATURES</h2>
+    <div class="features">
+        <div class="card">
+            <span><i class="ri-bug-line"></i></span>
+            <h4>Fix Your Bugs</h4>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam eveniet magnam eius, consequuntur doloremque aliquam, distinctio culpa explicabo molestias soluta error quibusdam consectetur dolorum veritatis suscipit, sint maiores debitis!
+                You have any problem in your codes? Tell me, I will help you fix it.
             </p>
-            <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
-                <a href="#"><i class="ri-twitter-line"></i></a>
+            <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+        </div>
+        <div class="card">
+            <span><i class="ri-shake-hands-line"></i></span>
+            <h4>Cooperation</h4>
+            <p>
+                Want to work together? Send me an email — I’d be happy to connect.
+            </p>
+            <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
+        </div>
+        <div class="card">
+            <span><i class="ri-global-line"></i></span>
+            <h4>Website Development</h4>
+            <p>
+                I design and build responsive websites that are fast, clean, and tailored to your needs.
+            </p>
+            <a href="#">See Projects <i class="ri-arrow-right-line"></i></a>
+        </div>
+        <div class="card">
+            <span><i class="ri-database-2-line"></i></span>
+            <h4>Frontend & Backend</h4>
+            <p>
+                From user interface to database logic, I manage both frontend and backend development effectively.
+            </p>
+            <a href="#">Learn More <i class="ri-arrow-right-line"></i></a>
+        </div>
+    </div>
+</section>
+
+    
+<section class="container" id="project-section">
+    <h2 class="header">MY PROJECTS</h2>
+    <p class="sub-header">
+        Berikut beberapa project yang pernah saya kembangkan, mulai dari sistem manajemen gym, layanan jasa, hingga manajemen stok produksi.
+    </p>
+    <div class="pricing">
+
+        <!-- Project 1 -->
+        <div class="card" onclick="openModal(0)">
+            <img src="image/project1-1.png" alt="MuscleGym Preview" style="border-radius: 10px; margin-bottom: 1rem;">
+            <div class="content">
+                <h4>MuscleGym</h4>
+                <p>
+                    Platform untuk jadwal olahraga harian & penjualan suplemen, lengkap dengan panel admin untuk melihat user dan transaksi.
+                </p>
             </div>
+            <button class="btn">View Project</button>
         </div>
-        <div class="column">
-            <h4>Company</h4>
-            <a href="#">Business</a>
-            <a href="#">Partnership</a>
-            <a href="#">Network</a>
+
+        <!-- Project 2 -->
+        <div class="card" onclick="openModal(1)">
+            <img src="image/project2-1.png" alt="Ham & Cleaning Preview" style="border-radius: 10px; margin-bottom: 1rem;">
+            <div class="content">
+                <h4>Ham & Cleaning</h4>
+                <p>
+                    Website penyewaan jasa cleaning service dengan fitur pemilihan layanan, transfer pembayaran, dan manajemen pesanan oleh admin.
+                </p>
+            </div>
+            <button class="btn">View Project</button>
         </div>
-        <div class="column">
-            <h4>About Us</h4>
-            <a href="#">Blog</a>
-            <a href="#">Channels</a>
-            <a href="#">Sponsor</a>
+
+        <!-- Project 3 -->
+        <div class="card" onclick="openModal(2)">
+            <img src="image/project3-1.png" alt="Manajemen Stok Kerupuk Preview" style="border-radius: 10px; margin-bottom: 1rem;">
+            <div class="content">
+                <h4>Manajemen Stok Kerupuk</h4>
+                <p>
+                    Sistem produksi dan pencatatan stok untuk UMKM kerupuk, termasuk bahan baku, tanggal kadaluarsa, dan laporan stok otomatis.
+                </p>
+            </div>
+            <button class="btn">View Project</button>
         </div>
-        <div class="column">
-            <h4>Contact</h4>
-            <a href="#">Contact Us</a>
-            <a href="#">Privicy Policy</a>
-            <a href="#">Terms & Conditions</a>
+
+    </div>
+</section>
+
+<!-- Modal Project Carousel -->
+<div id="project-modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <div class="carousel">
+            <img id="carousel-img" src="image/project1-1.png" alt="Project Preview">
         </div>
-    </footer>
+        <div class="carousel-controls">
+            <button onclick="prevSlide()">&#10094;</button>
+            <button onclick="nextSlide()">&#10095;</button>
+        </div>
+    </div>
+</div>
+
+
+<footer class="container">
+    <span class="blur"></span>
+    <span class="blur"></span>
+    <div class="column">
+        <div class="logo">
+            <img src="image/logo.png">
+        </div>
+        <p>
+            This portfolio showcases my journey and skills as a web developer. I’m passionate about creating user-friendly and impactful digital experiences.
+        </p>
+        <div class="socials">
+            <a href="#"><i class="ri-youtube-line"></i></a>
+            <a href="#"><i class="ri-instagram-line"></i></a>
+            <a href="#"><i class="ri-twitter-line"></i></a>
+        </div>
+    </div>
+    <div class="column">
+        <h4>Company</h4>
+        <a href="#">Business</a>
+        <a href="#">Partnership</a>
+        <a href="#">Network</a>
+    </div>
+    <div class="column">
+        <h4>About Me</h4>
+        <a href="#">Blog</a>
+        <a href="#">Channels</a>
+        <a href="#">Sponsor</a>
+    </div>
+    <div class="column">
+        <h4>Contact</h4>
+        <a href="#">Get in Touch</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+    </div>
+</footer>
+
 
     <button class="scroll-top" onclick="scrollToTop()">
         <i class="ri-arrow-drop-up-line"></i>
